--- a/PowerTasks/PowerTasks.nuspec
+++ b/PowerTasks/PowerTasks.nuspec
@@ -7,7 +7,7 @@
 		<owners>Shayne van Asperen</owners>
 		<licenseUrl>https://github.com/shaynevanasperen/PowerTasks/blob/master/LICENSE</licenseUrl>
 		<projectUrl>https://github.com/shaynevanasperen/PowerTasks</projectUrl>
-		<iconUrl>C:\DEV\Shayne\PowerTasks\pt32.png</iconUrl>
+		<iconUrl>https://raw.githubusercontent.com/shaynevanasperen/PowerTasks/master/pt32.png</iconUrl>
 		<requireLicenseAcceptance>false</requireLicenseAcceptance>
 		<summary>Convention based task runner using Invoke-Build</summary>
 		<description>This package provides PowerShell scripts to automatically compile, package, test and deploy your code based on a set of conventions. It is based on Invoke-Build and consists of a set of tasks written in Powershell. There are predefined properties and tasks as well as some useful functions which you can use to help create your own custom tasks.</description>
