--- a/PowerTasks/PowerTasks.nuspec
+++ b/PowerTasks/PowerTasks.nuspec
@@ -7,12 +7,19 @@
 		<owners>Shayne van Asperen</owners>
 		<licenseUrl>https://github.com/shaynevanasperen/PowerTasks/blob/master/LICENSE</licenseUrl>
 		<projectUrl>https://github.com/shaynevanasperen/PowerTasks</projectUrl>
-		<iconUrl>https://raw.githubusercontent.com/shaynevanasperen/PowerTasks/master/pt32.png</iconUrl>
+		<iconUrl>https://raw.githubusercontent.com/shaynevanasperen/PowerTasks/master/PowerTasks.png</iconUrl>
 		<requireLicenseAcceptance>false</requireLicenseAcceptance>
 		<summary>Convention based task runner using Invoke-Build</summary>
-		<description>This package provides PowerShell scripts to automatically compile, package, test and deploy your code based on a set of conventions. It is based on Invoke-Build and consists of a set of tasks written in Powershell. There are predefined properties and tasks as well as some useful functions which you can use to help create your own custom tasks.</description>
+		<description>
+			This package provides PowerShell scripts to automatically compile, package, test and deploy your code based on a set of conventions.
+			It is based on Invoke-Build and consists of a set of tasks written in Powershell. There are predefined properties and tasks as well
+			as some useful functions which you can use to help create your own custom tasks.
+		</description>
 		<language>en-US</language>
-		<tags>build, powershell, invoke, convention, clean, compile, test, pack, push, octopack, octopus, deploy, azure, website, cloud, service, grunt, chutzpah, 7zip, ilmerge, mspec, nunit, specflow, nuget</tags>
+		<tags>
+			build, powershell, invoke, convention, clean, compile, test, pack, push, octopack, octopus, deploy, azure, website, cloud,
+			service, grunt, chutzpah, 7zip, ilmerge, mspec, nunit, specflow, nuget
+		</tags>
 		<developmentDependency>true</developmentDependency>
 		<dependencies>
 			<dependency id="Invoke-Build" version="2.9.13" />
