--- a/PowerTasks/PowerTasks.nuspec
+++ b/PowerTasks/PowerTasks.nuspec
@@ -10,16 +10,9 @@
 		<iconUrl>https://raw.githubusercontent.com/shaynevanasperen/PowerTasks/master/PowerTasks.png</iconUrl>
 		<requireLicenseAcceptance>false</requireLicenseAcceptance>
 		<summary>Convention based task runner using Invoke-Build</summary>
-		<description>
-			A PowerShell task runner based on Invoke-Build. Invoke-Build is a build and test automation tool which invokes tasks defined in PowerShell scripts.
-			It is similar to psake but arguably easier to use and more powerful. Removes the boilerplate code from your build scripts and supports a convention-based
-			plugin model for extending functionality with common tasks	and includes some useful functions which you can use to help create your own custom tasks.
-		</description>
+		<description>A PowerShell task runner based on Invoke-Build. Invoke-Build is a build and test automation tool which invokes tasks defined in PowerShell scripts. It is similar to psake but arguably easier to use and more powerful. Removes the boilerplate code from your build scripts and supports a convention-based plugin model for extending functionality with common tasks and includes some useful functions which you can use to help create your own custom tasks.</description>
 		<language>en-US</language>
-		<tags>
-			build, powershell, invoke, convention, clean, compile, test, pack, push, octopack, octopus, deploy, azure, website, cloud,
-			service, grunt, chutzpah, 7zip, ilmerge, mspec, nunit, specflow, nuget
-		</tags>
+		<tags>build, powershell, invoke, convention, clean, compile, test, pack, push, octopack, octopus, deploy, azure, website, cloud,service, grunt, chutzpah, 7zip, ilmerge, mspec, nunit, specflow, nuget</tags>
 		<developmentDependency>true</developmentDependency>
 		<dependencies>
 			<dependency id="Invoke-Build" version="2.12.3" />
