--- a/PowerTasks/.Tasks/OctoPack.nuspec
+++ b/PowerTasks/.Tasks/OctoPack.nuspec
@@ -16,6 +16,7 @@
 		<developmentDependency>true</developmentDependency>
 		<dependencies>
 			<dependency id="PowerTasks" version="2.0.0" />
+			<dependency id="OctopusTools" version="3.0.18.71" />
 		</dependencies>
 	</metadata>
 	<files>
