Add a new plugin which gets the commit messages between the last succesful run and the current run and dumps them into a relaesenotes-document

--- a/PowerTasks/PowerTasks.csproj
+++ b/PowerTasks/PowerTasks.csproj
@@ -49,6 +49,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include=".Tasks.ps1" />
+    <None Include=".Tasks\TeamCityReleaseNotes.nuspec">
+      <DependentUpon>TeamCityReleaseNotes.ps1</DependentUpon>
+    </None>
+    <None Include=".Tasks\TeamCityReleaseNotes.ps1" />
     <None Include=".Tasks\Version.nuspec">
       <DependentUpon>Version.ps1</DependentUpon>
     </None>
