--- a/PowerTasks/PowerTasks.csproj
+++ b/PowerTasks/PowerTasks.csproj
@@ -49,6 +49,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include=".Tasks.ps1" />
+    <None Include=".Tasks\MSpec.nuspec">
+      <DependentUpon>MSpec.ps1</DependentUpon>
+    </None>
     <None Include=".Tasks\OctoCreateRelease.ps1" />
     <None Include=".Tasks\OctoCreateRelease.nuspec">
       <DependentUpon>OctoCreateRelease.ps1</DependentUpon>
@@ -57,6 +60,7 @@
       <DependentUpon>TeamCityReleaseNotes.ps1</DependentUpon>
     </None>
     <None Include=".Tasks\TeamCityReleaseNotes.ps1" />
+    <None Include=".Tasks\MSpec.ps1" />
     <None Include=".Tasks\Version.nuspec">
       <DependentUpon>Version.ps1</DependentUpon>
     </None>
