--- a/PowerTasks/PowerTasks.csproj
+++ b/PowerTasks/PowerTasks.csproj
@@ -49,6 +49,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include=".Tasks.ps1" />
+    <None Include=".Tasks\Chutzpah.nuspec">
+      <DependentUpon>Chutzpah.ps1</DependentUpon>
+    </None>
+    <None Include=".Tasks\Chutzpah.ps1" />
     <None Include=".Tasks\NUnit.nuspec">
       <DependentUpon>NUnit.ps1</DependentUpon>
     </None>
