Add plugin to run MsTest

--- a/PowerTasks/PowerTasks.csproj
+++ b/PowerTasks/PowerTasks.csproj
@@ -49,6 +49,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include=".Tasks.ps1" />
+    <None Include=".Tasks\MsTest.nuspec">
+      <DependentUpon>MsTest.ps1</DependentUpon>
+    </None>
     <None Include=".Tasks\OctoDeployRelease.nuspec">
       <DependentUpon>OctoDeployRelease.ps1</DependentUpon>
     </None>
@@ -57,6 +60,7 @@
       <DependentUpon>Chutzpah.ps1</DependentUpon>
     </None>
     <None Include=".Tasks\Chutzpah.ps1" />
+    <None Include=".Tasks\MsTest.ps1" />
     <None Include=".Tasks\XUnit.nuspec">
       <DependentUpon>XUnit.ps1</DependentUpon>
     </None>
