--- a/PowerTasks/.Tasks/VsTest.nuspec
+++ b/PowerTasks/.Tasks/VsTest.nuspec
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
 	<metadata>
-		<id>PowerTasks.Plugins.MsTest</id>
+		<id>PowerTasks.Plugins.VsTest</id>
 		<version>1.0.0</version>
 		<authors>Kenneth Truyers</authors>
 		<owners>Kenneth Truyers</owners>
@@ -9,10 +9,10 @@
 		<projectUrl>https://github.com/shaynevanasperen/PowerTasks</projectUrl>
 		<iconUrl>https://raw.githubusercontent.com/shaynevanasperen/PowerTasks/master/PowerTasks.png</iconUrl>
 		<requireLicenseAcceptance>false</requireLicenseAcceptance>
-		<summary>A PowerTasks plugin providing a "MsTest" task</summary>
-		<description>MsTest Test Runner plugin for PowerTasks</description>
+		<summary>A PowerTasks plugin providing a "VsTest" task</summary>
+		<description>VsTest Test Runner plugin for PowerTasks</description>
 		<language>en-US</language>
-		<tags>powershell, invoke, build, tasks, plugin, mstest</tags>
+		<tags>powershell, invoke, build, tasks, plugin, vstest</tags>
 		<developmentDependency>true</developmentDependency>
 		<dependencies>
 			<dependency id="PowerTasks" version="3.0.0" />
@@ -22,6 +22,6 @@
 		<file src="nuspec\DUMMY.txt" target="lib" />
 		<file src="nuspec\install.ps1" target="tools" />
 		<file src="nuspec\uninstall.ps1" target="tools" />
-		<file src="MsTest.ps1" target="scripts" />
+		<file src="VsTest.ps1" target="scripts" />
 	</files>
 </package>
