--- a/PowerTasks/PowerTasks.csproj
+++ b/PowerTasks/PowerTasks.csproj
@@ -49,6 +49,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include=".Tasks.ps1" />
+    <None Include=".Tasks\PrepareWebJobs.nuspec">
+      <DependentUpon>PrepareWebJobs.ps1</DependentUpon>
+    </None>
+    <None Include=".Tasks\PrepareWebJobs.ps1" />
     <None Include=".Tasks\OctoDeployRelease.nuspec">
       <DependentUpon>OctoDeployRelease.ps1</DependentUpon>
     </None>
@@ -57,6 +61,10 @@
       <DependentUpon>Chutzpah.ps1</DependentUpon>
     </None>
     <None Include=".Tasks\Chutzpah.ps1" />
+    <None Include=".Tasks\YlpAppVersion.nuspec">
+      <DependentUpon>YlpAppVersion.ps1</DependentUpon>
+    </None>
+    <None Include=".Tasks\YlpAppVersion.ps1" />
     <None Include=".Tasks\VsTest.nuspec">
       <DependentUpon>VsTest.ps1</DependentUpon>
     </None>
